--- a/proyect/docker-compose.yml
+++ b/proyect/docker-compose.yml
@@ -32,10 +32,7 @@ services:
       - ./app:/app/app
       - ./tests:/app/tests
     command: > 
-      uvicorn app.main:app
-      --host 0.0.0.0
-      --port 8000
-      --reload
+      bash -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
 
 volumes:
   pgdata:
